# evmc-jni

./: .gitignore  .gitmodules  LICENSE  README.md  pom.xml
misc/: license_header.txt
src/main/java/org/semux/evmc/jni/: Context.java  Evm.java  EvmError.java  EvmException.java  EvmFactory.java  Instance.java  Native.java  StateContext.java  VM.java
src/main/java/org/semux/evmc/jni/type/: Address.java  CallKind.java  DataWord.java  Flag.java  Message.java  Result.java  Revision.java  StatusCode.java  TransactionContext.java
src/main/java/org/semux/evmc/jni/util/: Bytes.java  Hex.java
src/main/native/: CMakeLists.txt  org_semux_evmc_jni_Native.cpp  org_semux_evmc_jni_Native.h
src/test/java/org/semux/evmc/jni/: NativeTest.java
